--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="CV Camilo Sierra Lozano">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel = "icon" href = 
-        "/root/source/media/title-logo.png" 
+        "./root/source/media/title-logo.png" 
                 type = "image/x-icon">
     <link
             rel="preconnect"
@@ -23,7 +23,7 @@
             <link
             href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;800&family=Sacramento&display=swap"
             rel="stylesheet">
-    <link rel="stylesheet" href="/root/source/css/styles.css">
+    <link rel="stylesheet" href="./root/source/css/styles.css">
     <title>Camilo Sierra</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <style>
@@ -71,7 +71,7 @@
 	<!-- LABELS -->
 	<div class="tags">
 		<div class="tag tag1">
-			<div class="tagShort"> <img src="/root/source/media/linkedin.png" alt="linked-in-logo" style="max-width: 50%;"> </div>
+			<div class="tagShort"> <img src="./root/source/media/linkedin.png" alt="linked-in-logo" style="max-width: 50%;"> </div>
 			<div class="tagLong"> <a href="https://www.linkedin.com/in/camilo-sierra-7a9637265"> <u>Linked-In</u> </a> </div>
 		</div>
 <!-- 		<br><br><br> -->
@@ -111,7 +111,7 @@
 
 </body>
 
+<script defer src="https://www.gstatic.com/charts/loader.js"></script>
+<script defer src="./root/source/js/script.js"></script>
 
-<script src="/root/source/js/script.js"></script>
-<script src="https://www.gstatic.com/charts/loader.js"></script>
 </html>
