--- a/index.html
+++ b/index.html
@@ -627,9 +627,53 @@
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d178787.43121360563!2d-73.87667812354086!3d45.55930461093001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cc91a541c64b70d%3A0x654e3138211fefef!2sMontreal%2C%20QC!5e0!3m2!1sen!2sca!4v1700696949630!5m2!1sen!2sca" frameborder="0" style="border:0; width: 100%; height: 290px; border-radius: 20px; filter: grayscale(70%);"></iframe>
             </div>
           </div>
-
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form action="https://formsubmit.co/sierra170299camilo@gmail.com" method="POST" class="php-email-form"> <!--role="form" -->
+            <form action="https://formsubmit.co/sierra170299camilo@gmail.com" method="POST">
+              <input type="hidden" name="_next" value="https://camiworks.github.io/CamiWorks/thanks.html">
+              <input type="hidden" name="_captcha" value="false">
+            <div class="container text-center">
+            <!--Meantime Solution-->
+              <!--Rules and exceptions-->
+              <!--End of rules and exceptions-->
+              <div class="row align-items-start lesswithform">
+                <div class="col">
+                  <label for="name">Name</label>
+                  <input type="text" name="name" placeholder="   * Required" required>
+                </div>
+                <div class="col">
+                  <label for="email">E-Mail</label>
+                  <input type="email" name="email"  placeholder="   * Required" required>
+                </div>
+              </div>
+              <div class="row align-items-start">
+                <div class="col">
+                  <label for="subject">Subject</label>
+                  <input type="text" name="subject" placeholder="   * Required" required>
+                </div>
+              </div>
+              <div class="row align-items-start">
+                <div class="col">
+                  <label for="message">Message</label>
+                  <input type="text" name="message" placeholder="   Your Message here" class="messageStyle">
+                </div>
+              </div>
+              <button type="submit" class="sendtempform">Send</button>
+           
+            </div>
+          </form> 
+
+
+          </div>
+
+
+
+<!--PHP fix 
+
+
+
+
+          
+            <form action="https://formsubmit.co/your@email.com" method="POST"  role="form" class="php-email-form">
               <div class="row">
                 <div class="form-group col-md-6">
                   <label for="name">Full Name</label>
@@ -657,8 +701,10 @@
             </form>
           </div>
 
-        </div>
 
+-->
+
+        </div>
       </div>
     </section><!-- End Contact Section -->
 
@@ -703,15 +749,15 @@
   document.getElementById('shareButton').addEventListener('click', () => {
   if (navigator.share) {
     navigator.share({
-      title: 'Camilo Sierra',
-      text: 'Check out this content!',
-      url: 'https://camiworks.github.io/CamiWorks/'
+      title: 'Share Example',
+      text: 'Check out this awesome content!',
+      url: 'https://example.com'
     })
     .then(() => console.log('Successful share'))
     .catch((error) => console.log('Error sharing:', error));
   } else {
     // Fallback for browsers that do not support the Share API
-    const shareUrl = 'https://camiworks.github.io/CamiWorks/'; // Replace with your actual URL
+    const shareUrl = 'https://example.com'; // Replace with your actual URL
     const dummyInput = document.createElement('input');
     document.body.appendChild(dummyInput);
     dummyInput.value = shareUrl;
