--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                 <li>AEC: Commercial Communication</li>
               </ul>
               <!-- Download a Copy of my cv -->
-              <p><em><u><a href="/assets/Documents/CamiloSierra.pdf" download="CamiloSierra.pdf">Download a copy</a></u></em></p>
+              <p><em><u><a href="./assets/Documents/CamiloSierra.pdf" download="CamiloSierra.pdf">Download a copy</a></u></em></p>
             </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
@@ -749,15 +749,15 @@
   document.getElementById('shareButton').addEventListener('click', () => {
   if (navigator.share) {
     navigator.share({
-      title: 'Share Example',
-      text: 'Check out this awesome content!',
-      url: 'https://example.com'
+      title: 'Camilo Sierra',
+      text: 'Check out this!',
+      url: 'https://camiworks.github.io/CamiWorks/'
     })
     .then(() => console.log('Successful share'))
     .catch((error) => console.log('Error sharing:', error));
   } else {
     // Fallback for browsers that do not support the Share API
-    const shareUrl = 'https://example.com'; // Replace with your actual URL
+    const shareUrl = 'https://camiworks.github.io/CamiWorks/'; // Replace with your actual URL
     const dummyInput = document.createElement('input');
     document.body.appendChild(dummyInput);
     dummyInput.value = shareUrl;
