CV final update commit

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
         <div class="section-title">
           <h2>About Me</h2>
-          <p>Hi, my name is Camilo Sierra, and I am a developer and a certified IT tech. I have worked with big and small corporations for over 4 years building new platforms, while providing technical support and solutions in a variaty of technologies.</p>
+          <p>Hi, my name is Camilo Sierra. I am a developer, data-analyst, and a certified IT tech. I have worked with large and small corporations for over 4 years now, building new platforms while providing technical support and solutions in a variety of technologies.</p>
         </div>
 
         <div class="row">
@@ -132,10 +132,9 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Math, Stats &amp; Tech.</h3> <br>
+            <h3>Maths, Stats &amp; Tech.</h3> <br>
             <p class="fst-italic">
-              To be honest, I started before as a marketing specialist and throughout the years I discovered a 
-              hidden passion for technology and exact science. Since then I have built my professional, and a good part of my personal life as well, around the world of technology and numbers.
+              Before it all, I started as a marketing specialist. As time went by,I discovered a hidden passion for technology and formal sciences. Since then, I have built my professional life, and a good part of my personal life as well around the world of technology and numbers. 
             </p> <br>
             <div class="row">
               <div class="col-lg-6">
@@ -164,7 +163,7 @@
       <div class="container">
         <div class="section-title">
           <h2>Skills</h2>
-          <p>Here are some of my skills and technologies I use on my day to day.</p>
+          <p>Here are some of the skills and technologies I use on my day-to-day;</p>
         </div>
         <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
           <div class="swiper-wrapper">
@@ -333,7 +332,6 @@
         </div>
 
         <div class="row">
-          <h3 class="resume-title">Sumary</h3>
             <div>
               <h4>Camilo Sierra</h4>
               <p><em>Certified IT tech support and developer with over 4 years of experience.</em></p>
@@ -378,7 +376,7 @@
               <h5>2019 - 2020</h5>
               <p><em><a href="https://republicadelcacao.com/" target="_blank">Republica Del Cacao</a></em></p>
               <p><em>Bogotá, Colombia.</em></p>
-              <p>Manage sales, marketing and web incorporations. Ensure a seamless workflow and consistency over retails sales and
+              <p>Manage sales, marketing and web incorporations. Ensure a seamless workflow and consistency over retail sales and
                 web marketing target strategies. Meet key performance indexes and metrics.</p>
               <ul>
                 <li>Create, develop and execute marketing strategies.</li>
@@ -391,7 +389,7 @@
               <h5>2018 - 2019</h5>
               <p><em><a href="https://www.teleperformance.com/en-us/locations/colombia-site/colombia/" target="_blank">Tele-Performance</a></em></p>
               <p><em>Bogotá, Colombia.</em></p>
-              <p>Fast-Phase work with SAP ticketing system. Customer Support and client relation.</p>
+              <p>Fast-paced work with SAP ticketing system. Customer Support and client relation.</p>
               <ul>
                 <li>SAP Ticketing Fulfillment.</li>
                 <li>Multitasking.</li>
@@ -406,14 +404,14 @@
               <h5>2023 - Ongoing</h5>
               <p><em><a href="https://www.lse.ac.uk/" target="_blank">LSE - The London School of Economics and Political science</a></em></p>
               <p><em>MicroBachelors ® Program in Mathematics and Statistics Fundamentals</em></p>
-              <p>Essential mathematical and statistical concepts, methods, techniques and skills. Mathematical techniques to solve problems in economics and related subjects. Master statistics fundamentals and learn to apply a variety of methods for explaining, summarising and presenting data and interpreting results clearly using appropriate diagrams, titles and labels when required</p>
+              <p>Essential mathematical and statistical concepts, methods, techniques and skills. Mathematical techniques to solve problems in economics and related subjects. Master statistics fundamentals and application of a variety of methods for explaining, summarising and presenting data and interpreting results clearly using appropriate diagrams, titles and labels when required</p>
             </div>
             <div class="resume-item">
               <h4>Computing Support</h4>
               <h5>2020 - 2022</h5>
               <p><em><a href="https://www.teccart.qc.ca/" target="_blank">Institut Teccart</a></em></p>
               <p><em>DEP Computing Support Technician</em></p>
-              <p>Knowledge of analytical and problem solving skills, operating systems, telecommunication protocols, IT security, management of local and wide area networks, personal computers and office software systems. Communication skills qualities with Bilingualism.</p>
+              <p>Knowledge of analytical and problem solving skills, operating systems, telecommunication protocols, IT security, management of local and wide area networks, personal computers and office software systems. Communication skills qualities with bilingualism.</p>
             </div>
             <div class="resume-item">
               <h4>Commercial Communication</h4>
@@ -566,14 +564,16 @@
 
         <div class="section-title">
           <h2>Services +</h2>
-          <p>Is not a secret to anyone, that we are more than a set of sharp skill, we are people, for that reason I found extremely important to showcases not only my skills as an Analyst but also as a human being.</p>
+          <p>It is not a secret to anyone that workers are more than a set of sharp skills, they are people. For that reason. For that reason, I find it extremely important to showcase not only my skills as an analyst but also as a human being.</p>
         </div>
         <br>
         <div class="row">
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
             <div class="icon"><i class="bi bi-megaphone-fill"></i></div>
             <h4 class="title">Active Communication</h4>
-            <p class="description"> I believe in the power of open and honest communication. Actively listening to others, expressing thoughts clearly, and fostering a collaborative environment are essential aspects of effective communication. I strive to ensure that everyone feels heard and valued.</p>
+            <p class="description"> I strive to ensure that every input is heard and valued.
+              Humour. To follow Canadian and British standards you should write it as humour, but humor is correct in the USA. Just make sure you are consistent with which standard you use with other words too (like color/colour, etc)
+              </p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="bi bi-hammer"></i></div>
