--- a/index.html
+++ b/index.html
@@ -63,7 +63,10 @@
     #shareButton:hover{
       background-color: #d2d5df;
       color: #474E68;
-
+    }
+    img {
+      -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+      filter: grayscale(100%);
     }
   </style>
 
@@ -85,7 +88,7 @@
   <header id="header">
     <div class="d-flex flex-column">
       <div class="profile">
-        <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/profile-img.png" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Camilo Sierra</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="http://www.linkedin.com/in/camilo-sierra-7a9637265" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
@@ -129,7 +132,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+            <img src="assets/img/profile-img.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Maths, Stats &amp; Tech.</h3> <br>
