--- a/index.html
+++ b/index.html
@@ -64,10 +64,6 @@
       background-color: #d2d5df;
       color: #474E68;
     }
-    img {
-      -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
-      filter: grayscale(100%);
-    }
   </style>
 
   <!-- =======================================================
@@ -628,6 +624,8 @@
                 <p>Montreal, Canada</p>
               </div>
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d178787.43121360563!2d-73.87667812354086!3d45.55930461093001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cc91a541c64b70d%3A0x654e3138211fefef!2sMontreal%2C%20QC!5e0!3m2!1sen!2sca!4v1700696949630!5m2!1sen!2sca" frameborder="0" style="border:0; width: 100%; height: 290px; border-radius: 20px; filter: grayscale(70%);"></iframe>
+              <br><br><br>
+              <i style="min-width: 100%; background: none; border: none;font-size: small;">"Success is not final, failure is not fatal: It is the courage to continue that counts." - Winston Churchill</i>
             </div>
           </div>
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
