--- a/assets/professional_card/card.html
+++ b/assets/professional_card/card.html
@@ -52,9 +52,8 @@ p {
 }
 
 .card-container {
-	background-color: #ffffff;
 	background-size: 10px 10px;
-	background-image: repeating-linear-gradient(45deg, #ffffff 0, #ffffff 1px, #fffaf3 0, #ffffff 50%);
+	background-image: repeating-linear-gradient(45deg, #ffffff 0, #ffffff 1px, #fbfbfb 0, #ebebeb 50%);
 	border-radius: 20px 20px 20px 20px;
 	box-shadow: 0px 10px 20px -10px rgba(0,0,0,0.75);
 	color: #202132; /*Font color*/
