card & txt index

--- a/assets/professional_card/card.html
+++ b/assets/professional_card/card.html
@@ -24,8 +24,7 @@
 
 
 body {
-	background-color: #ffffff;
-	background-image:  radial-gradient(#ffffff 0.5px, transparent 0.5px), radial-gradient(#ffffff 0.5px, #B4BBCD 0.5px);
+	background-image:  radial-gradient(#ffffff 0.5px, transparent 0.5px), radial-gradient(#ffffff 0.5px, #a5a5a5 0.5px);
 	background-size: 20px 20px;
 	background-position: 0 0,10px 10px; /*Background main color*/
 	font-family: Montserrat, sans-serif;
@@ -97,7 +96,7 @@ button.primary.ghost:hover {
 }
 
 .skills {
-	background-color: #202132;
+	background-color: #000000;
 	text-align: left;
 	padding: 15px;
 	margin-top: 30px;
