--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
           <!--To be added on tha dvance of my carrer-->
           <!--<li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>-->
-          <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
+          <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>More</span></a></li>
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
@@ -139,7 +139,6 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Years of Experience:</strong> <span>4 +</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Nationality:</strong> <span>Colombian 🇨🇴</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
@@ -562,7 +561,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Services +</h2>
+          <h2>More +</h2>
           <p>It is not a secret to anyone that workers are more than a set of sharp skills, they are people. For that reason. For that reason, I find it extremely important to showcase not only my skills as an analyst but also as a human being.</p>
         </div>
         <br>
@@ -570,34 +569,32 @@
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
             <div class="icon"><i class="bi bi-megaphone-fill"></i></div>
             <h4 class="title">Active Communication</h4>
-            <p class="description"> I strive to ensure that every input is heard and valued.
-              Humour. To follow Canadian and British standards you should write it as humour, but humor is correct in the USA. Just make sure you are consistent with which standard you use with other words too (like color/colour, etc)
-              </p>
+            <p class="description">I consider active communication to be a cornerstone for a successful work environment and it plays an important role in my personal and my professional life.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="bi bi-hammer"></i></div>
             <h4 class="title">Dedication</h4>
-            <p class="description">Dedication is the driving force behind achieving goals and making a positive impact. I approach tasks with commitment and perseverance, recognizing that meaningful accomplishments often require sustained effort and focus.</p>
+            <p class="description">Dedication is a quality that I view in high regard, and I believe it is crucial in a professional environment to excel on any tasks you put work on.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
             <div class="icon"><i class="bi bi-bar-chart-fill"></i></div>
             <h4 class="title">Constant Improvement</h4>
-            <p class="description">Embracing a mindset of continuous improvement is crucial for personal and collective growth. I am dedicated to learning, evolving, and adapting to new challenges. This value encourages me to seek out opportunities for development and to contribute to the improvement of processes and outcomes.</p>
+            <p class="description">I strongly believe in the concept of constant improvement. In the fast-paced environment we live in today, it demands us to adapt and continuously improve ourselves.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
             <div class="icon"><i class="bi bi-skip-start-circle-fill"></i></div>
             <h4 class="title">Initiative</h4>
-            <p class="description">I believe in taking proactive steps to make a difference. Initiative involves a willingness to step outside of comfort zones, explore new ideas, and contribute innovative solutions. I strive to be a catalyst for positive change, always looking for ways to improve situations and create opportunities.</p>
+            <p class="description">I consider initiative a fundamental quality that can significantly take you above and beyond any expectation, and demonstrating a willingness to take on challenges.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
             <div class="icon"><i class="bi bi-person-plus-fill"></i></div>
             <h4 class="title">Camaraderie</h4>
-            <p class="description">Building strong, supportive relationships is a cornerstone of a fulfilling life. I value camaraderie by fostering a sense of community, understanding, and teamwork. Celebrating successes together and offering support during challenges contribute to a positive and uplifting environment.</p>
+            <p class="description">I value building a close relationships with my workmates, but recognizing the importance of professional boundaries.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
             <div class="icon"><i class="bi bi-emoji-laughing-fill"></i></div>
-            <h4 class="title">Humor</h4>
-            <p class="description">A good sense of humor adds lightness to life's challenges and strengthens connections with others. I appreciate the power of laughter in relieving stress, building rapport, and creating a positive atmosphere. Humor is a valuable tool for maintaining perspective and resilience in the face of difficulties.</p>
+            <h4 class="title">Team-Player</h4>
+            <p class="description">Yes, I consider myself a strong team player. I believe that an effective teamwork is essential for achieving any goal in life, no matter what you do.</p>
           </div>
         </div>
 
@@ -625,7 +622,7 @@
               </div>
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d178787.43121360563!2d-73.87667812354086!3d45.55930461093001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cc91a541c64b70d%3A0x654e3138211fefef!2sMontreal%2C%20QC!5e0!3m2!1sen!2sca!4v1700696949630!5m2!1sen!2sca" frameborder="0" style="border:0; width: 100%; height: 290px; border-radius: 20px; filter: grayscale(70%);"></iframe>
               <br><br><br>
-              <i style="min-width: 100%; background: none; border: none;font-size: small;">"Success is not final, failure is not fatal: It is the courage to continue that counts." - Winston Churchill</i>
+              <i style="min-width: 100%; background: none; border: none;font-size: small;">I appreciate your time for reviewing my work. <br> <br> <br> Camilo Sierra L.</i>
             </div>
           </div>
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
